# INFOMGP_Project

./: .gitmodules  CMakeLists.txt  ReadMe.md
data/: bunny-scene.txt
src/: macgrid.cpp  macgrid.h  main.cpp  point_spheres.h  scene.cpp  scene.h
